// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverGap snapshots should render PopoverGap 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="0"
  >
    <div
      class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="gap-columns"
      height="12"
      name="GapColumns"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed column gap (0)
    </small>
  </div>
</DocumentFragment>
`;

exports[`PopoverGap snapshots should render with mixed value 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="0"
  >
    <div
      class="PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="gap-columns"
      height="12"
      name="GapColumns"
      width="12"
    />
    <small
      class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Fixed column gap (0)
    </small>
  </div>
</DocumentFragment>
`;
